@@ -7,6 +7,7 @@
 	* Changed boolean rootshell into shlvl counter.
 	* Catch set -e exits within built-in commands.
 	* Size optimisations with state/s in main().
+	* Only reread exitstatus on EXEXIT in exitshell.
 
 2005-01-31  Gerrit Pape <pape@smarden.org>
 
